# BouncyBalls

./: .gitignore  .gitmodules  CMakeLists.txt
include/: Ball.h
src/: Ball.cpp  main.cpp
